--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="description" content="Un site simple pour publier des photos et des articles.">
   <link rel="stylesheet" href="styles.css">
 </head>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 <body>
 <header>
   <div class="container">
@@ -30,17 +35,17 @@
   </section>
 
   <section class="cards">
-    <div class="card">
+    <div class="card" data-aos="fade-up">
       <h3>📸 Galerie photos</h3>
       <p>Mettez vos images dans le dossier <code>/photos</code> puis éditez <code>photos.html</code> pour les afficher.</p>
       <p class="mt-1"><a href="photos.html">Voir la galerie →</a></p>
     </div>
-    <div class="card">
+    <div class="card" data-aos="fade-up" data-aos-delay="150">
       <h3>✍️ Articles</h3>
       <p>Créez des fichiers HTML dans <code>/posts</code>, puis ajoutez un lien dans <code>articles.html</code>.</p>
       <p class="mt-1"><a href="articles.html">Voir les articles →</a></p>
     </div>
-    <div class="card">
+    <div class="card" data-aos="fade-up" data-aos-delay="300">
       <h3>🔒 RGPD & Mentions</h3>
       <p>Complétez la page <code>mentions-legales.html</code> avant publication publique.</p>
       <p class="mt-1"><a href="mentions-legales.html">Ouvrir la page →</a></p>
